MDEV-24600 fixup: Remove unused trx_register_for_2pc()